[package]
name = "bank_statement_importer"
version = "0.1.0"
authors = ["Rory McKinley <rorymckinley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.10"
csv="1.1"
dirs = "2.0"
hex="0.4.0"
linked-hash-map="0.5.2"
rust_decimal="1.1.0"
sha2="0.8.0"
yaml-rust="0.4.3"
